--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -4,6 +4,12 @@ body {
 .mr-1 {
   margin-right: 10px;
 }
+.mb-2 {
+  margin-bottom: 20px;
+}
+.text-center {
+  text-align: center;
+}
 body .layoutContent {
   padding: 25px 50px;
 }
